// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render  Social Button Component 1`] = `
<link
  className="fa fa-instagram"
  href=""
/>
`;

exports[`should render  Social Button Component with className=facebok, if prop=facebook 1`] = `
<link
  className="fa fa-facebook"
  href=""
/>
`;

exports[`should render  Social Button Component with className=facebook, if prop(type)=facebook 1`] = `
<link
  className="fa fa-facebook"
  href=""
/>
`;

exports[`should render  Social Button Component with className=facebook, if prop=facebook 1`] = `
<link
  className="fa fa-facebook"
  href=""
/>
`;

exports[`should render an Header with button Назад 1`] = `
<link
  className="fa fa-instagram"
  href=""
/>
`;
